# termview

./: .gitignore  LICENSE  README.md  pyproject.toml
termview/: __init__.py  audio.py  cli.py  controls.py  detect.py  loader.py  resize.py  stream.py  terminal.py
termview/renderers/: __init__.py  base.py  block.py  iterm2.py  kitty.py  sixel.py
